<resources>
    <string name="app_name">Curhatin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="et_email_error_message">Email address does not match</string>
    <string name="password">Password</string>
    <string name="et_password_error_message">Password is too short</string>
    <string name="image_login">Image Login</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="textview">Do not have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="image_register">Image Register</string>
    <string name="username">Name</string>
    <string name="et_name_error_message">Name cannot be empty</string>
    <string name="et_phone_error_message">Phone number cannot be empty</string>
    <string name="et_str_error_message">STR number cannot be empty</string>
    <string name="desc_login">By signin up,  you’re agree to our</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="phone">Phone Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="signup_as_doctor">Sign up as a doctor?</string>
    <string name="click_here">Click here</string>
    <string name="have_account">Have an account?</string>
    <string name="str">STR Number</string>
    <string name="signup_as_user">Sign up as a user?</string>
    <string name="forgot">Forgot</string>
    <string name="password2">Password?</string>
    <string name="desc_forgot_password">Don’t worry! It happens. Please enter the address associated with your account.</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="et_password_null_error_message">Please confirm your password</string>
    <string name="change_password">Change Password</string>
    <string name="register_account_success">Register Account Success!</string>
    <string name="register_message_alert">Congratulation! Your account has been registered successfully, please login with your new account</string>
    <string name="ok">Ok</string>
    <string name="change_password_success">Change Password Success!</string>
    <string name="pasword_message_alert">Congratulation! Your password has  been changed successfully, please login with your new password</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_verification_desc">Enter the code you received on your email</string>
    <string name="get_premium">Get Premium</string>
    <string name="chat_with_psychologist">Chat with Psychologist</string>
    <string name="premium_desc">You can chat and consult with psychologists to solve your problems and complaints.</string>
    <string name="premium_price">Rp. 100,000/month</string>
    <string name="search_hint">Search chat...</string>
    <string name="search_doctor">Search doctor...</string>
    <string name="nama_dokter">Nama Dokter</string>
    <string name="sp_doc">Spesialis Dokter</string>
    <string name="experience">Experience</string>
    <string name="review">Review</string>
    <string name="view_all">View All</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_foto_profile">Edit Foto</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="my_post">My Post</string>
    <string name="logout_user">Logout</string>
    <string name="premium">Premium</string>
    <string name="basic">Basic</string>
    <string name="logo">Logo</string>
    <string name="checking_for_update">Checking for update</string>
    <string name="copyright">Copyright © 2022 • Capstone C048</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="chat_doctor">Chat Doctor</string>
    <string name="more">More</string>
    <string name="what_s_on_your_mind">What’s on your mind?</string>
    <string name="create_story">Create Story</string>
    <string name="upload">Upload</string>
    <string name="set_anonymously">Set anonymously?</string>
    <string name="category">Category</string>
    <string name="hint_news_story">What do you think?</string>
    <string name="different_password_message_alert">Password is different, please check and try again</string>
    <string name="update_password_message_alert">Congratulation! Your password has  been changed successfully, please login with your new password</string>
    <string name="create_new">Create New</string>
    <string name="listen">Pendengar</string>
    <string name="or">Atau</string>
    <string name="speaker">Pencerita</string>
    <string name="type_here">Type here...</string>
    <string name="post_comment"><![CDATA[Post & Comment]]></string>
    <string name="coming_soon">Coming Soon</string>
    <string name="doctor_name">doctor name</string>
    <string name="specialist_doctor">specialist doctor</string>
    <string name="job_experience">10 years</string>
    <string name="expertise">expertise</string>
    <string name="expertises">Expertises</string>
    <string name="alumnus">Alumnus</string>
    <string name="doctors_practice">Doctor\'s Practice</string>
    <string name="str_number">STR Number</string>
    <string name="notifications">Notifications</string>
    <string name="comments">Comments</string>
    <string name="send_button">Send Button</string>
    <string name="update_profile_message_alert">Profile berhasil diubah</string>
    <string name="save_profile">Save Profile</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="doctor">Doctor</string>
</resources>