<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray"
    tools:context=".home.CommentFragment">

    <LinearLayout
        android:id="@+id/linear_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/eva_arrow_back_outline" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="14dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/comments"
            android:textColor="@color/black_opacity"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_anonymous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/set_anonymously"
            android:textColor="@color/blue"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/is_anonymous"
            android:layout_width="51sp"
            android:layout_height="10dp"
            android:scaleX="0.50"
            android:scaleY="0.50"
            android:gravity="center"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_opacity"
        android:layout_below="@id/linear_top"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_comment"
        android:layout_above="@id/send_comment"
        android:layout_below="@id/divider"/>

    <LinearLayout
        android:id="@+id/send_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_view"
        android:padding="15dp"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/et_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/hint_news_story"
            android:inputType="textMultiLine"
            android:textColor="@color/black_opacity"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/akar_icons_send"
            android:contentDescription="@string/send_button"
            android:layout_gravity="bottom"/>
    </LinearLayout>
</RelativeLayout>